@@ -3,6 +3,7 @@ Revision history for Perl module documentation ThreatNet::DATN2004
 0.02 Thu Feb 15 2008
 	- Backporting Makefile.PL to raw EU:MM to prevent the need
 	  to rerelease when Module::Install is updated.
+	- Decided that was a bad idea and ported back to Module::Install 0.75
 
 0.01 Fri Apr  8 2004
 	- Packaged up the documentation from November 2004
